# spbu_project

./: Task_1.ipynb  Task_2.ipynb  Task_3.ipynb
project/: README.rst  hottest_month_and_city.py  pyproject.toml  setup.cfg  setup.py  test_get_hottest_month_and_city.py
project/homeproject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
