[tool.poetry]
name = "Some"
version = "0.0.1"
description="Get hottest month and city."
authors = ["Shakirov Emil <shakirov.er@esphere.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.1"
yastyleguide = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/levkovalenko/yastyleguide/master/styles/nitpick-yastyle.toml"
